--- a/homework1/src/components/UserModal/styles.module.scss
+++ b/homework1/src/components/UserModal/styles.module.scss
@@ -1,41 +1,52 @@
-.modal {
-  position: relative;
-  width: 12rem;
-  padding: 1rem;
-  border: 1px solid #000;
-  margin: 0 auto;
-  h3 {
-    margin: 0 0 1rem 0;
-    font-size: 1.1rem;
-    font-weight: normal;
-  }
-  .close {
-    position: absolute;
-    line-height: 0;
-    top: 0.6rem;
-    right: 0.3rem;
-    cursor: pointer;
-  }
-  .firstName {
-    margin: 0 0 1.5rem 0;
-    input {
-      padding: 0.3rem;
-    }
-  }
-  .lastName {
-    margin: 0 0 1.5rem 0;
-    input {
-      padding: 0.3rem;
-    }
-  }
-  .buttons {
-    display: flex;
-    .delete {
-      width: 4rem;
-      margin: 0 0 0 1rem;
-    }
-    .keep {
-      width: 4rem;
-    }
-  }
+.userModal {
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0,0,0, 0.5);
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	.form {
+		position: relative;
+		background-color: #ffffff;
+		width: 12rem;
+		padding: 1rem;
+		border: 1px solid #000;
+		h3 {
+			margin: 0 0 1rem 0;
+			font-size: 1.1rem;
+			font-weight: normal;
+		}
+		.close {
+			position: absolute;
+			line-height: 0;
+			top: 0.6rem;
+			right: 0.3rem;
+			cursor: pointer;
+		}
+		.firstName {
+			margin: 0 0 1.5rem 0;
+			input {
+				padding: 0.3rem;
+			}
+		}
+		.lastName {
+			margin: 0 0 1.5rem 0;
+			input {
+				padding: 0.3rem;
+			}
+		}
+		.buttons {
+			display: flex;
+			.delete {
+				width: 4rem;
+				margin: 0 0 0 1rem;
+			}
+			.keep {
+				width: 4rem;
+			}
+		}
+	}
 }
