--- a/homework1/src/App.css
+++ b/homework1/src/App.css
@@ -1,5 +1,9 @@
 .app {
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 5rem 0 0 0;
+	height: 100vh;
+	width: 100vw;
+	background-color: #f7f7f7;
+}
+.content {
+	display: flex;	
+	position: relative;
 }
