--- a/homework1/src/components/Users/styles.module.scss
+++ b/homework1/src/components/Users/styles.module.scss
@@ -1,7 +1,24 @@
 .users{
 	list-style-type: none;
 	margin: 0 0 1rem 0;
+	padding: 5rem 0 0 5rem;
+	font-size: 1.3rem;
+	li {
+		display: flex;
+		align-items: center;
+		margin: 0 0 1.5rem 0;
+	}
 	.user {
-		margin: 0 0 1rem 0;
+		width: 12rem;
+	}
+	.delete {
+		cursor: pointer;
+		font-size: 1rem;
+		line-height: 1.2rem;
+		border: 1px solid greenyellow;
+		padding: 0 0.3rem;
+		border-radius: 0.4rem;
+		background-color: greenyellow;
+		
 	}
 }
