--- a/homework1/src/App.css
+++ b/homework1/src/App.css
@@ -1,9 +1,14 @@
 .app {
 	height: 100vh;
 	width: 100vw;
-	background-color: #f7f7f7;
+	background-color: #bdcbdf;
+	position: relative;
+	padding: 5rem 0 0 0;
 }
 .content {
-	display: flex;	
-	position: relative;
+	max-width: 25rem;
+	background-color: #46529d;
+	margin: 0 auto;
+	border-radius: 1rem;
+
 }
