--- a/homework1/src/components/UserModal/styles.module.scss
+++ b/homework1/src/components/UserModal/styles.module.scss
@@ -1,7 +1,7 @@
 .userModal {
 	width: 100vw;
 	height: 100vh;
-	background-color: rgba(0,0,0, 0.5);
+	background-color: rgba(0,0,0, 0.7);
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -10,28 +10,25 @@
 	justify-content: center;
 	.form {
 		position: relative;
-		background-color: #ffffff;
-		width: 12rem;
-		padding: 1rem;
+		background-color: #bfcee0;
+		width: 15rem;
+		padding: 1.5rem;
 		border: 1px solid #000;
 		h3 {
-			margin: 0 0 1rem 0;
-			font-size: 1.1rem;
+			margin: 0 0 1.5rem 0;
+			font-size: 1.4rem;
+			line-height: 1.4rem;
 			font-weight: normal;
+			color: #000;
 		}
 		.close {
 			position: absolute;
 			line-height: 0;
-			top: 0.6rem;
-			right: 0.3rem;
+			top: 0.8rem;
+			right: 0.5rem;
 			cursor: pointer;
 		}
-		.firstName {
-			margin: 0 0 1.5rem 0;
-			input {
-				padding: 0.3rem;
-			}
-		}
+		.firstName,
 		.lastName {
 			margin: 0 0 1.5rem 0;
 			input {
@@ -40,12 +37,16 @@
 		}
 		.buttons {
 			display: flex;
-			.delete {
-				width: 4rem;
-				margin: 0 0 0 1rem;
-			}
+			.delete,
 			.keep {
-				width: 4rem;
+				background-color: #ffffff;
+				border-radius: 0.5rem;
+				border: 1px solid #ffffff;
+				padding: 0.15rem 0.5rem;
+				letter-spacing: 0.5px;
+			}
+			.delete {
+				margin: 0 0 0 1.5rem;
 			}
 		}
 	}
