--- a/homework1/src/components/Users/styles.module.scss
+++ b/homework1/src/components/Users/styles.module.scss
@@ -1,24 +1,32 @@
 .users{
 	list-style-type: none;
-	margin: 0 0 1rem 0;
-	padding: 5rem 0 0 5rem;
+	margin: 0 0 2rem 0;
 	font-size: 1.3rem;
+	width: 100%;
 	li {
 		display: flex;
 		align-items: center;
-		margin: 0 0 1.5rem 0;
+		justify-content: space-between;
+		margin: 0 0 0.5rem 0;
+		padding: 0.5rem 0;
+		border-bottom: 2px solid #5560a5;
+		color: #ffffff;
+		font-family: "Times New Roman", Times, Baskerville, Georgia, serif;
+		letter-spacing: 0.5px;
+		&:last-child{
+			margin: 0;
+		}
 	}
-	.user {
-		width: 12rem;
-	}
-	.delete {
+	.edit {
 		cursor: pointer;
 		font-size: 1rem;
-		line-height: 1.2rem;
-		border: 1px solid greenyellow;
-		padding: 0 0.3rem;
+		line-height: 1.3rem;
+		border: 1px solid rgb(147, 235, 15);
+		padding: 0 0.5rem;
 		border-radius: 0.4rem;
-		background-color: greenyellow;
-		
+		background-color: rgb(147, 235, 15);
+		letter-spacing: 0.7px;
+		color: #000;
+		font-family: 'Open Sans', sans-serif;
 	}
 }
