--- a/homework1/src/components/UsersPage/styles.module.scss
+++ b/homework1/src/components/UsersPage/styles.module.scss
@@ -1,15 +1,16 @@
 .userPage{
-	display: inline-flex;
+	display: flex;
 	align-items: center;
 	flex-direction: column;
+	margin: 0 auto;
+	padding: 2rem;
 	.addUser {
-		width: 2rem;
-		height: 2rem;
-		border-radius: 50%;
-		background-color: greenyellow;;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+		width: 100%;
+		text-align: center;
+		background-color: #2ebaee;
+		padding: 0.6rem 0;
+		border-radius: 0.5rem;
 		cursor: pointer;
+		color: #ffffff;
 	}
 }
