--- a/homework1/src/App.module.scss
+++ b/homework1/src/App.module.scss
@@ -1,11 +1,15 @@
-.app {
+body {
 	height: 100vh;
 	width: 100vw;
 	background-color: #bdcbdf;
 	position: relative;
 	padding: 5rem 0 0 0;
+	margin: 0;
+	overflow: hidden;
+	letter-spacing: 1px;
+	font-family: 'Open Sans', sans-serif;
 }
-.content {
+.app {
 	max-width: 25rem;
 	background-color: #46529d;
 	margin: 0 auto;
