--- a/homework1/src/components/organisms/UserModal/styles.module.scss
+++ b/homework1/src/components/organisms/UserModal/styles.module.scss
@@ -28,15 +28,18 @@
 			right: 0.5rem;
 			cursor: pointer;
 		}
+		.firstName {
+			margin: 0 0 1.5rem 0;
+		}
 		.firstName,
 		.lastName {
-			margin: 0 0 1.5rem 0;
 			input {
 				padding: 0.3rem;
 			}
 		}
 		.buttons {
 			display: flex;
+			margin: 1.5rem 0 0 0;
 			.delete,
 			.keep {
 				background-color: #ffffff;
@@ -44,9 +47,7 @@
 				border: 1px solid #ffffff;
 				padding: 0.15rem 0.5rem;
 				letter-spacing: 0.5px;
-			}
-			.delete {
-				margin: 0 0 0 1.5rem;
+				margin: 0 1.5rem 0 0;
 			}
 		}
 	}
