--- a/homework1/src/App.module.scss
+++ b/homework1/src/App.module.scss
@@ -11,7 +11,7 @@ body {
 }
 .app {
 	max-width: 25rem;
-	background-color: #46529d;
+	background-color: rgba(70, 82, 157, 1);
 	margin: 0 auto;
 	border-radius: 1rem;
 
