--- a/homework1/src/components/organisms/UserModal/styles.module.scss
+++ b/homework1/src/components/organisms/UserModal/styles.module.scss
@@ -1,54 +1,54 @@
 .userModal {
-	width: 100vw;
-	height: 100vh;
-	background-color: rgba(0,0,0, 0.7);
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	.form {
-		position: relative;
-		background-color: #bfcee0;
-		width: 15rem;
-		padding: 1.5rem;
-		border: 1px solid #000;
-		h3 {
-			margin: 0 0 1.5rem 0;
-			font-size: 1.4rem;
-			line-height: 1.4rem;
-			font-weight: normal;
-			color: #000;
-		}
-		.close {
-			position: absolute;
-			line-height: 0;
-			top: 0.8rem;
-			right: 0.5rem;
-			cursor: pointer; 
-		}
-		.firstName {
-			margin: 0 0 1.5rem 0;
-		} 
-		.firstName,
-		.lastName {
-			input {
-				padding: 0.3rem;
-			}
-		}
-		.buttons {
-			display: flex;
-			margin: 1.5rem 0 0 0;
-			.delete,
-			.keep {
-				background-color: #ffffff;
-				border-radius: 0.5rem;
-				border: 1px solid #ffffff;
-				padding: 0.15rem 0.5rem;
-				letter-spacing: 0.5px;
-				margin: 0 1.5rem 0 0;
-			}
-		}
-	}
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .form {
+    position: relative;
+    background-color: #bfcee0;
+    width: 15rem;
+    padding: 1.5rem;
+    border: 1px solid #000;
+    h3 {
+      margin: 0 0 1.5rem 0;
+      font-size: 1.4rem;
+      line-height: 1.4rem;
+      font-weight: normal;
+      color: #000;
+    }
+    .close {
+      position: absolute;
+      line-height: 0;
+      top: 0.8rem;
+      right: 0.5rem;
+      cursor: pointer;
+    }
+    .firstName {
+      margin: 0 0 1.5rem 0;
+    }
+    .firstName,
+    .lastName {
+      input {
+        padding: 0.3rem;
+      }
+    }
+    .buttons {
+      display: flex;
+      margin: 1.5rem 0 0 0;
+      .delete,
+      .keep {
+        background-color: #ffffff;
+        border-radius: 0.5rem;
+        border: 1px solid #ffffff;
+        padding: 0.15rem 0.5rem;
+        letter-spacing: 0.5px;
+        margin: 0 1.5rem 0 0;
+      }
+    }
+  }
 }
