--- a/homework1/webapp/src/App.module.scss
+++ b/homework1/webapp/src/App.module.scss
@@ -14,4 +14,17 @@ body {
   background-color: rgba(70, 82, 157, 1);
   margin: 0 auto;
   border-radius: 1rem;
+	overflow: hidden;
+	.header{
+		height: 50px;
+		display: flex;
+		justify-content: flex-end;
+		align-items: center;
+		background-color: #2ebaee;
+		padding: 0 1rem;
+		.logOut{
+			font-size: 1.1rem;
+			cursor: pointer;
+		}
+	}
 }
